--- a/notebooks/Demo.ipynb
+++ b/notebooks/Demo.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "### Read alignment and peak calling\n",
     "\n",
-    "** We used Kundaje pipeline (https://github.com/kundajelab/atac_dnase_pipelines) for aligning pair ended reads to hg19 and removing duplicates as scABC (https://github.com/SUwonglab/scABC/) did **\n",
+    "** We used Kundaje pipeline (https://github.com/kundajelab/atac_dnase_pipelines) for aligning pair ended reads to hg19 and removing duplicates as scABC (https://github.com/SUwonglab/scABC/) did **  \n",
     "bds_scr [SCR_NAME] atac.bds -align -species hg19 -species_file [SPECIES_FILE_PATH] -nth [NUM_THREADS] -fastq1_1 [READ_PAIR1] -fastq1_2 [READ_PAIR2]\n",
     "\n",
     "** The resulting bam files were merged using samtools. **  \n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "source": [
     "## Running SCALE model \n",
-    "e.g. SCALE -d <data_matrix> -k <cluster_number> -o <output_dir>  \n",
+    "e.g. SCALE -d data_matrix -k cluster_number -o output_dir  \n",
     "** input:**  \n",
     "data matrix\n",
     "\n",
@@ -233,12 +233,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## self-defined input dir and output dir\n",
+    "input_dir = '~/scATAC/Leukemia/'\n",
+    "out_dir = '~/scATAC/output/Leukemia/'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = '~/scATAC/Leukemia/'\n",
-    "out_dir = '~/scATAC/output/Leukemia/'\n",
     "specific_peak_dir = out_dir + 'specific_peaks/'\n",
     "feature_file = out_dir+'feature.txt'\n",
     "assignments_file = out_dir+'cluster_assignments.txt'\n",
@@ -542,7 +551,7 @@
    "metadata": {},
    "source": [
     "#### 4.4 cell type specific motifs with chromVAR\n",
-    "e.g. chromVAR -i <input_dir> --peakfile <peak_file> -o <output_dir>   \n",
+    "e.g. chromVAR -i input_dir --peakfile peak_file -o output_dir   \n",
     "if -o omit, output_dir == input_dir"
    ]
   },
