--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -243,7 +243,7 @@
    "outputs": [],
    "source": [
     "weight = get_decoder_weight(out_dir+'model.pt')\n",
-    "weight_index = sort_by_mad(raw_data, axis=1).index\n",
+    "weight_index = sort_by_mad(raw_data.T).columns\n",
     "specific_peaks = peak_selection(weight, weight_index)"
    ]
   },
@@ -470,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
