--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !SCALE.py -d data.txt -k 6 -e 1000 -o output"
+    "# !SCALE.py -d data.txt -k 6 -e 1000 -o output --lr 0.002"
    ]
   },
   {
